# jianpu-generator

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  PLAN.md  TODO.md  cheatsheet-examples.toml  clippy.toml  context.md  demo.jianpu  irrecoverable-errors-todo.md  new_file_template.jianpu  plan-step-1-metadata-source.md  plan-step-2-edit-metadata-modal.md  plan-step-3-editor-codelens.md  plan-step-4-app-wiring.md  postcard.jianpu  recoverable-error-todo.md  reference.jianpu  simple.jianpu  syntax.md  彌勒淨土鄉.jianpu
.cursor/rules/: syntax-doc.mdc
crates/jianpu-wasm/: Cargo.toml
crates/jianpu-wasm/src/: lib.rs  tests.rs  types.rs
fixtures/: follow_and_key.jianpu
jianpu-generator/: Cargo.toml
jianpu-generator/src/: grouper.rs  main.rs  pdf.rs  renderer.rs  utils.rs
scripts/: check-max-file-lines.py  install-git-hooks.sh
scripts/git-hooks/: pre-commit
src/: cheatsheet_examples_test.rs  cheatsheet_examples_test.rs.tmp  combiner.rs  desugar.rs  desugar_tests.rs  error.rs  error_reporter.rs  filters.rs  grouper.rs  grouping.rs  lib.rs  main.rs  measure_spans.rs  midi.rs  pdf.rs  render_config.rs  renderer.rs  split_track.rs  utils.rs  wav.rs
src/ast/: grouped.rs  parsed.rs
src/compiler/: beam.rs  mod.rs  part_slice.rs  slur_chains.rs  tests.rs  tests_slur.rs  types.rs
src/compositor/: mod.rs  tests.rs  types.rs
src/consolidator/: mod.rs  tests.rs
src/coordinate_resolver/: mod.rs  resolve.rs  tests.rs
src/error/: recoverable_kind.rs  tests.rs
src/grid_layout/: expand.rs  highlight.rs  layout.rs  layout_decoration.rs  mod.rs  slur_placement.rs  tests.rs  tests_highlight.rs  tests_layout.rs  types.rs
src/grouper/: directive_grouper.rs  empty_note_measures.rs  lyrics_pairing.rs  mod.rs  tests.rs  tests_lyrics.rs  tests_tie.rs
src/layout/: layout_engine.rs  mod.rs  new_layout.rs  new_types.rs  part_emit.rs  types.rs
src/midi/: midi_notes.rs  mod.rs  tests.rs
src/parser/: metadata_parser.rs  mod.rs  parts_parser.rs  section_splitter.rs
src/renderer/: mod.rs  new_renderer.rs  new_tests.rs  new_types.rs  tests.rs
src/serializer/: mod.rs
src/source_edit/: mod.rs  tests.rs
src/tests/: ditto.rs  lyrics.rs  measure_audio.rs  mod.rs  not_mentioned.rs  postcard.rs  render.rs
tests/: demo_source.rs  integration.rs  measure_spans.rs  new_file_template.rs  recoverable_directive_errors.rs  score_line_hints.rs
web/: biome.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/e2e/: cmd-enter-play.spec.ts  (+9 more)
(+157 files in other folders)
