[package]
name = "jianpu-wasm"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wav = ["jianpu-generator/wav"]
pdf = ["jianpu-generator/pdf"]

[dependencies]
jianpu-generator = { path = "../..", default-features = false }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tsify = { version = "0.5", default-features = false, features = ["js"] }
wasm-bindgen = "0.2"

[dev-dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }

[lints.rust]
dead_code = "deny"
unused_variables = "deny"
unsafe_code = "forbid"
unreachable_pub = "deny"
